@@ -1,6 +1,5 @@
-$NetBSD: distinfo,v 1.19 2004/06/02 20:02:18 bouyer Exp $
+$NetBSD: distinfo,v 1.20 2004/06/04 14:05:53 xtraeme Exp $
 
-SHA1 (squirrelmail-1.4.3.tar.bz2) = 8eb0c45e322b18994732baba70a81168e5a8a0ff
-Size (squirrelmail-1.4.3.tar.bz2) = 2254146 bytes
+SHA1 (squirrelmail-1.4.3a.tar.bz2) = 8cb22905ddedbe94c9a174d12074263ce84c9a27
+Size (squirrelmail-1.4.3a.tar.bz2) = 2254039 bytes
 SHA1 (patch-aa) = cad816ce6e36def3f1b99ba831aa297c074d5aca
-SHA1 (patch-ab) = 0c906a9d945cb72664204f002502debdd5cad39b
